@@ -12,6 +12,7 @@ import org.springframework.validation.FieldError;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("${api.prefix}/brand")
@@ -26,7 +27,7 @@ public class BrandController {
             List<String> err = result.getFieldErrors()
                     .stream()
                     .map(FieldError::getDefaultMessage)
-                    .toList();
+                    .collect(Collectors.toList());
         }
         brandService.create(brandDTO);
         return "redirect:/api/thuc/brand";
